--- a/about.html
+++ b/about.html
@@ -432,6 +432,28 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Disable Right-Click & Developer Shortcuts -->
+    <script>
+      // Disable Right-Click
+      document.addEventListener('contextmenu', event => event.preventDefault());
+
+      // Disable Developer Shortcuts
+      document.onkeydown = function(e) {
+          if (e.keyCode == 123) { // F12
+              return false;
+          }
+          if (e.ctrlKey && e.shiftKey && (e.keyCode == 73 || e.keyCode == 74 || e.keyCode == 67)) {
+              return false; // Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+Shift+C
+          }
+          if (e.ctrlKey && e.keyCode == 85) {
+              return false; // Ctrl+U
+          }
+      };
+    </script>
+
+
+    
 </body>
 
 </html>
