--- a/feature.html
+++ b/feature.html
@@ -126,7 +126,7 @@
             <h1 class="display-4 text-white animated slideInDown mb-4">Features</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Features</li>
                 </ol>
@@ -262,6 +262,25 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Disable Right-Click & Developer Shortcuts -->
+    <script>
+      // Disable Right-Click
+      document.addEventListener('contextmenu', event => event.preventDefault());
+
+      // Disable Developer Shortcuts
+      document.onkeydown = function(e) {
+          if (e.keyCode == 123) { // F12
+              return false;
+          }
+          if (e.ctrlKey && e.shiftKey && (e.keyCode == 73 || e.keyCode == 74 || e.keyCode == 67)) {
+              return false; // Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+Shift+C
+          }
+          if (e.ctrlKey && e.keyCode == 85) {
+              return false; // Ctrl+U
+          }
+      };
+    </script>
 </body>
 
 </html>
