--- a/index.html
+++ b/index.html
@@ -773,6 +773,72 @@ No waiting, no worries—support is always one call away.</span>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Disable Right-Click & Developer Shortcuts -->
+    <script>
+      // Disable Right-Click
+      document.addEventListener('contextmenu', event => event.preventDefault());
+
+      // Disable Developer Shortcuts
+      document.onkeydown = function(e) {
+          if (e.keyCode == 123) { // F12
+              return false;
+          }
+          if (e.ctrlKey && e.shiftKey && (e.keyCode == 73 || e.keyCode == 74 || e.keyCode == 67)) {
+              return false; // Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+Shift+C
+          }
+          if (e.ctrlKey && e.keyCode == 85) {
+              return false; // Ctrl+U
+          }
+      };
+    </script>
+
+    <script>
+        // Flag for detecting DevTools
+        let devtoolsOpen = false;
+
+        function detectDevTools() {
+            const threshold = 160;
+            const widthDiff = window.outerWidth - window.innerWidth;
+            const heightDiff = window.outerHeight - window.innerHeight;
+
+            if (widthDiff > threshold || heightDiff > threshold) {
+                devtoolsOpen = true;
+            } else {
+                devtoolsOpen = false;
+            }
+
+            if (devtoolsOpen) {
+                document.body.innerHTML = `
+                    <div style="padding:40px; text-align:center; font-family:Arial;">
+                        <h1>⚠️ Developer Mode Detected</h1>
+                        <p>Please close Inspect Element (Developer Tools) to continue.</p>
+                        <button onclick="location.reload()" 
+                            style="
+                                margin-top:20px;
+                                padding:12px 25px;
+                                background:#FF800F;
+                                border:none;
+                                color:#fff;
+                                font-size:16px;
+                                border-radius:5px;
+                                cursor:pointer;">
+                            Click Here to Reload
+                        </button>
+                    </div>
+                `;
+            }
+        }
+
+        // Check every 500ms
+        setInterval(detectDevTools, 500);
+    </script>
+
+
+
+
+
+
 </body>
 
 </html>
