--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto bg-white pe-4 py-3 py-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link ">Home</a>
                 <div class="nav-item dropdown ">
 <!--                     <a href="service.html" class="nav-item nav-link">Our Services</a> -->
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Services</a>
@@ -108,7 +108,7 @@
                     </div>
                 </div> -->
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="about.html" class="nav-item nav-link active">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
             <!-- <div class="h-100 d-lg-inline-flex align-items-center d-none">
@@ -492,7 +492,7 @@
         // Check every 500ms
         setInterval(detectDevTools, 500);
     </script>
-    
+
 </body>
 
 </html>
