--- a/gallery.html
+++ b/gallery.html
@@ -137,88 +137,89 @@
     <!-- Page Header End -->
 
 
-    <!-- Contact Start -->
+
+    <!-- Gallery Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-6 mb-5">If You Have Any Query, Please Connect With Our AC Repair & Installation Experts</h1>
-                    <p class="mb-4">Contact us today for professional AC repair, installation, maintenance, and gas filling services. We provide quick responses, trained technicians, and affordable doorstep support. <!-- <a href="https://htmlcodex.com/contact-form">Download Now</a> -->.</p>
-                    <!-- <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Message</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form> -->
-                    <div class="d-flex flex-wrap gap-3 mt-4">
+            <div class="row g-4 justify-content-center">
 
-                                <!-- Write a Mail -->
-                                <a href="mailto:appliancecare514@gmail.com" 
-                                    class="btn btn-primary py-3 px-4 animated slideInDown">
-                                    <img src="img/icon/mail_icon.png" alt="Mail Icon" style="width:20px; height:20px;">
-                                    Write a Mail
-                                </a>
-
-                                <!-- Call Now -->
-                                <a href="tel:+919138058070" 
-                                   class="btn btn-primary py-3 px-4 animated slideInDown">
-                                    <img src="img/icon/phone_icon.png" alt="Call Icon" style="width:20px; height:20px;">
-                                    Call Now
-                                </a>
-
-                                <!-- WhatsApp -->
-                                <a href="https://wa.me/919138058070?text=Hi" 
-                                   class="btn btn-primary py-3 px-4 animated slideInDown"
-                                   target="_blank">
-                                    <img src="img/icon/whatsapp_icon.png" alt="WhatsApp Icon" style="width:20px; height:20px;">
-                                    WhatsApp
-                                </a>
-                        </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
-                    <div class="position-relative overflow-hidden h-100">
-                        <a href="https://maps.app.goo.gl/XrqS3T8NHb3ByGoG6"
-                        target="_blank" 
-                        style="text-decoration:none; color:inherit;">
-                            <img src="img/ac_map.jpg" alt="Map Icon" style="width:500px; height:400px;">
-                        </a>
-                        <!-- <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe> -->
+                <!-- Image 1 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-1.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="0"
+                             alt="">
                     </div>
                 </div>
+
+                <!-- Image 2 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-2.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="1"
+                             alt="">
+                    </div>
+                </div>
+
+                <!-- Image 3 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-3.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="2"
+                             alt="">
+                    </div>
+                </div>
+
+                <!-- Image 4 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-4.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="3"
+                             alt="">
+                    </div>
+                </div>
+
+                <!-- Image 5 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-5.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="4"
+                             alt="">
+                    </div>
+                </div>
+
+                <!-- Image 6 -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1.1s">
+                    <div class="service-item">
+                        <img class="img-fluid gallery-img" 
+                             src="img/service-6.jpg" 
+                             data-bs-toggle="modal" 
+                             data-bs-target="#galleryModal"
+                             data-index="5"
+                             alt="">
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-    <!-- Contact End -->
 
-
+    <!-- Gallery End -->
     
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -383,6 +384,77 @@
         // Check every 500ms
         setInterval(detectDevTools, 500);
     </script>
+
+    <!-- Gallery Modal -->
+    <div class="modal fade" id="galleryModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content bg-dark">
+
+          <div class="modal-body p-0">
+
+            <!-- Carousel -->
+            <div id="galleryCarousel" class="carousel slide" data-bs-interval="false">
+
+              <div class="carousel-inner">
+
+                <div class="carousel-item active">
+                  <img src="img/service-1.jpg" class="d-block w-100">
+                </div>
+
+                <div class="carousel-item">
+                  <img src="img/service-2.jpg" class="d-block w-100">
+                </div>
+
+                <div class="carousel-item">
+                  <img src="img/service-3.jpg" class="d-block w-100">
+                </div>
+
+                <div class="carousel-item ">
+                  <img src="img/service-4.jpg" class="d-block w-100">
+                </div>
+
+                <div class="carousel-item">
+                  <img src="img/service-5.jpg" class="d-block w-100">
+                </div>
+
+                <div class="carousel-item">
+                  <img src="img/service-6.jpg" class="d-block w-100">
+                </div>
+
+              </div>
+
+              <!-- Controls -->
+
+              <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </button>
+
+              <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </button>
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    
+    <!-- Auto-open clicked image index -->
+    <script>
+        document.querySelectorAll(".gallery-img").forEach((img) => {
+            img.addEventListener("click", function() {
+                let index = this.getAttribute("data-index");
+                let carousel = document.querySelector("#galleryCarousel");
+                let bsCarousel = new bootstrap.Carousel(carousel);
+
+                bsCarousel.to(index); // Go to clicked image
+            });
+        });
+    </script>
+
+
 </body>
 
 </html>
