--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ No waiting, no worries—support is always one call away.</span>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Follow Us</h5>
